mule-user-guide/v/3.2/studio-scopes.adoc
=  Studio Scopes

== 关于范围

当您首先将它们放置在消息流画布上时，称为作用域的消息处理器显示为处理块（请参阅：*below*）。

image:Scope+Empty.png[范围+空]

某些范围（即*Poll*，*Message Enricher*和*Until Successful*）要求您在处理块中嵌入不多于一个消息处理器（请参阅：*below*）。不同的是，这些示波器通过以下方式为嵌入式消息处理器添加功能：

* 定期触发它
* 增强其有效载荷
* 触发它直到关联的事件成功

image:Scope+Single.png[范围+单]

通常，范围的其他子组（包括*Composite*，*Async*和*Sub Flow*）接受多个消息处理器（请参阅：*below*）。

image:Scope+Multi.png[范围+多]

就*Composite*而言，嵌入式构件块实际上是在不同频道上并行侦听传入消息的消息源（即 link:/mule-user-guide/v/3.2/studio-endpoints[入站端点]）（请参阅：**above, left**）。每当这些接收者中的任何一个接收到消息时，*Composite*作用域将其传递给流中的第一个消息处理器，从而触发该流。

对于*Async*和*Sub Flow*范围，嵌入式消息处理器形成一个单一的组合消息处理器（或事件）序列（请参阅：*above*）。

[%header%autowidth.spread]
|===
| image:check.png[查] a |

_Synchronous_表示在父流程恢复处理之前执行主流程暂停处理以及子流程中的所有消息处理器;换句话说，当同步子流程正在执行时，在父流程中不发生处理。

_Asynchronous_意味着只要子流接收到消息，它立即将该消息的一个副本发送到父流中的下一个消息处理器，以便父流中的处理继续，基本上不中断。异步子流程也开始用自己的消息处理器序列处理消息的另一个副本。这两个同步处理分支独立地继续，直到每个分支完成。

|===

*Async*作用域位于父流程序列中，当它接收到消息时，它将消息副本发送到父流程中的下一个消息处理器，同时（和_asychronously_）处理另一个副本消息通过其自己的嵌入式消息处理器序列（请参阅：*below*）。

image:Scope+Asynch.png[范围+非同步]

*Sub Flow*作用域相对于父流作为_synchronous_分支流存在（请参阅：*below*）。从 link:/mule-user-guide/v/3.2/flow-ref-component-reference[流量参考组件]收到消息后，它会通过嵌入式消息处理器的整个序列处理该消息，然后将消息传递回父流中的下一个消息处理器以供进一步处理。每次在主流程"calls"子流程处理块中的流程参考组件重复此过程。

image:Scope+Sub.png[范围+子]

Studio中提供的== 范围

[%header%autowidth.spread]
|===
|   |范围 |说明
| image:async.png[异步]  |异步 |创建一组异步执行的消息处理器，其余流程将继续并行执行。例如，您可以使用一系列构建块来填充异步作用域，这些构建块会执行日志记录，以便日志记录不会减慢应用程序流的其余部分。 +

 +
 有关配置异步范围的具体信息，请参阅 link:/mule-user-guide/v/3.2/async-scope-reference[异步范围参考]页面。
| image:composite-source.png[复合源]  |复合来源 |要接收来自多个输入通道的传入消息，请将两个或多个消息来源（也称为接收器）放入复合来源中。在任何支持的通道上输入复合源的消息都会触发处理流程。


image:message-enricher.png[消息富集]  |消息Enricher  |将消息追加到消息中，通常使用表达式来确定要评估哪部分有效负载，以便返回适当的值以附加到该有效负载。例如，该表达式可以评估邮政编码，然后将关联的城市和州附加到有效负载。然后将丰富的有效载荷传递给嵌入在Message Enricher处理块中的消息处理器。


image:UntilSucc.png[UntilSucc]  |直到成功 |以指定的时间间隔尝试将消息路由到嵌入式消息处理器，直到出现以下情况之一：+
* 成功+
* 最大重试次数达到+
* 抛出异常+
 +
 因此，Poll在将消息发送到资源（例如共享打印机）方面证明非常有用，它可能并不总是立即可用。
| image:SubFlow.png[子流]  |子流 |被另一个流调用的流。子流从流参考继承它们的属性，并且始终是同步的。当需要在同一流程中的多个点重用代码时，这种类型的范围可能非常有用。只需将流参考组件放置（并配置）到您想要执行子流处理模块的任何地方。

|===

== 范围配置

取决于具体的范围，配置需要两到四个步骤。

=== 将作用域放置在消息流画布上

将要实现的范围的图标拖到Message Flow画布上。请注意，所有六个范围最初都显示为空"processing blocks."下表列出了放置和填充范围的要求：

[%header%autowidth.spread]
|===
|范围 |展示位置要求 |人口要求
| *Async*  |必须放置在父流程 |中必须填充一系列相对于父流程异步执行的消息处理器
| *Composite*  |必须放置在父流程的开始处（即，必须充当消息源） |必须填充多个消息源
| *Message Enricher*  |必须放在父流程 |中必须正好填充一个消息处理器，消息丰富人员将其添加到增强消息
| *Poll*  |必须放在_outside_父流程序列中，然后由父流程中的流参考调用 |必须只填充一个消息处理器，以指定的时间间隔轮询触发器
| *Sub Flow*  |必须放置在父流程的_outside_之后，然后由父流程 |中的流参考组件引用一次或多次。必须由一系列消息处理器，它们相对于父流同步执行
| *Until Successful*  |必须放置在父流程 |中必须仅填充一个消息处理器，该范围将触发，直到事件成功
|===

=== 配置嵌入式消息处理器

所有嵌入式消息处理器或消息源的设置过程与非嵌入式构建块的设置过程相同。

=== 配置父范围

在所有情况下，除了不需要任何配置的*Composite Source*外，双击范围的图标以打开其属性窗格。 *Sub Flow*仅支持可选文档。其他四个示波器需要或允许不同程度的额外配置。

=== 连接子流程

对于作为子流在父流之外存在的*Sub Flow*和*Poll*，您必须在要调用这些子流的点处将一个或多个流参考组件插入并配置到父流中。

image:Scope+Connect.png[范围+连接]
